--- a/index.html
+++ b/index.html
@@ -72,6 +72,33 @@
         <span>By SIR RUFF'N'STUFF</span>
       </div>
     </div>
+    <div class="card" data-tab="javascript">
+      <div class="headline">ES8: The Next Step in the Evolution of Javascript and What it Means For Your Projects</div>
+      <div class="author">
+        <div class="img-container">
+          <img src="./assets/sir.jpg" />
+        </div>
+        <span>By SIR RUFF'N'STUFF</span>
+      </div>
+    </div>
+    <div class="card" data-tab="javascript">
+      <div class="headline">ES8: The Next Step in the Evolution of Javascript and What it Means For Your Projects</div>
+      <div class="author">
+        <div class="img-container">
+          <img src="./assets/sir.jpg" />
+        </div>
+        <span>By SIR RUFF'N'STUFF</span>
+      </div>
+    </div>
+    <div class="card" data-tab="javascript">
+      <div class="headline">ES8: The Next Step in the Evolution of Javascript and What it Means For Your Projects</div>
+      <div class="author">
+        <div class="img-container">
+          <img src="./assets/sir.jpg" />
+        </div>
+        <span>By SIR RUFF'N'STUFF</span>
+      </div>
+    </div>
 
     <div class="card" data-tab="javascript">
       <div class="headline">Type Coercion: Why Does NaN !== NaN? and Other Strange Occurrences</div>
